Refactor layout and styling in uzemeltetes.astro and implementation.astro

--- a/src/pages/implementation.astro
+++ b/src/pages/implementation.astro
@@ -11,8 +11,8 @@ changeLanguage("en");
 	<Container>
 		<div class="px-5 pt-10">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
-				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">ERPNext Implemen&shy;tation</h1>
+				<div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto md:hyphens-none">ERPNext Implemen&shy;tation</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Step by step, with training and documentation.</h2>
 					<div>
 						<Link href="/contact">
@@ -20,12 +20,12 @@ changeLanguage("en");
 						</Link>
 					</div>
 				</div>
-        <div class="mt-10 md:mt-0">
-					<img class="w-full" src="/images/ERPNext-implementation.jpg" alt="ERPNext Introduction" />
+        <div class="mt-10 md:mt-0 basis-[38%] overflow-hidden">
+					<img class="w-full block" src="/images/ERPNext-implementation.jpg" alt="ERPNext Introduction" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Implementing ERPNext in Practice</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
 						Every business is unique, at least in the sense that they play this game for profit. While there are differences between countries, industries, and enterprises, the fundamental processes are generally very similar. That's why it's advisable to review our own processes when implementing ERP, as they may not be optimal. Moreover, from different ERP systems like ERPNext, we can learn and apply best practices that have worked elsewhere.
@@ -34,7 +34,7 @@ changeLanguage("en");
 						<br><br>
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">How We Work</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
 						The Monolithon team follows industry rules and best practices not only during development but also in the support process for implementation. To get the full picture, we examine how the business currently operates for those who want to use the ERPNext system. We also coordinate how they want to work in the future because this is an opportunity to refine their operations, not just digitize existing ones.
@@ -46,7 +46,7 @@ changeLanguage("en");
 						This implies that we don't prepare a complete specification in advance and don't price it because there are too many invisible factors better handled together flexibly. The risks are also financially managed by the monthly fee structure we provide, as there is no large upfront investment, but there is continuous progress. The agreed-upon hours are typically spent more in the first implementation phase, and then in the operational phase, if it's balanced, we reduce the hours, with daily and monthly reports. If the client needs more support, we can collectively adjust the hours upward, making it predictable for everyone. It doesn't get lost and can be used for a later upgrade, typically needed annually.
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Guarantees</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
 						Regarding ERPNext, it's worth mentioning that besides being free and open-source, professional partners can assist in the introduction, and there are product guarantees available. Furthermore, Monolithon collaborates with several partners for the acquisition of existing solutions, avoiding the need to develop them from scratch. Additionally, we use this network for providing extra development capacity and quality assurance, both for our benefit and our clients.
