--- a/src/pages/hu/uzemeltetes.astro
+++ b/src/pages/hu/uzemeltetes.astro
@@ -10,8 +10,9 @@ changeLanguage("hu");
 <Layout lang="hu" title="ERPNext tárhely és üzemeltetés ">
 	<Container>
 		<div class="px-5 pt-10">
+
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
-				<div class="flex flex-col h-full justify-center">
+				<div class="flex flex-col h-full justify-center basis-3/5">
 					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext tárhely és üzemeltetés</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext tárhely a felhőben.</h2>
 				<div>
@@ -20,12 +21,13 @@ changeLanguage("hu");
 					</Link>
 				</div>
 				</div>
-        <div class="mt-10 md:mt-0">
-					<img class="w-full" src="/images/ERPNext-implementation.jpg" alt="ERPNext Introduction" />
+        <div class="mt-10 md:mt-0 basis-[38%] overflow-hidden">
+					<img class="w-full block" src="/images/ERPNext-implementation.jpg" alt="ERPNext Introduction" />
 				</div>
 			</div>
+
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Kényelmes és egyszerű ERPNext tárhely és üzemeltetési támogatás</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
 						Az ERPNext üzemeltetése szakértelem mellett speciális technikai feltételeket is megkíván. Több éves ERPNext használat alatt sok
@@ -36,7 +38,6 @@ changeLanguage("hu");
 						Az ERPNext fejlesztői által fejlesztett, üzemeltetett és optimalizált platform a Frappe Cloud szerintünk a legjobb ERPNext hoszting szolgáltató, ezért ajánljuk és használjuk. 	
 				</section>
 
-			
 				<section id="contact-form-2">
 					<NewsLetter />
 				  </section>
