refactor: vue storefront mobile view fix

--- a/src/pages/hu/vuestorefront-headless-ecommerce.astro
+++ b/src/pages/hu/vuestorefront-headless-ecommerce.astro
@@ -9,8 +9,8 @@ changeLanguage("hu");
 
 <Layout lang="hu" title="VueStoreFront Headless eCommerce webáruház a sebességért és a függetlenségért">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
 				<div class="flex flex-col h-full justify-center">
 					<h1 class="text-[60px] leading-none font-semibold">VueStoreFront Headless webáruház</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">A sebességért és a függetlenségért.</h2>
@@ -20,19 +20,19 @@ changeLanguage("hu");
 						</Link>
 					</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/vuestorefront-headless-ecommerce.jpg" alt="" />
+        <div class="mt-10 md:mt-0">
+					<img class="w-full" src="/images/vuestorefront-headless-ecommerce.jpg" alt="" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">A négy kilenc(ven)-es</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
 							Az "arany szakmában" a legjobb arany a négy kilences, azaz a 99,99 tisztaságú arany. <br><br>Hasonló sztenderd a weboldalaknál a Google Pagespeed Insight (sebességmérő eszköze, ami a lighthouse szoftverre épül) által mutatott 4 db 90%-os érték. Ez gyakorlatilag aranyat ér, hiszen ma nagyon kevés weboldal teljesíti ezt az értéket, főleg mobil változat esetén, viszont ezekt a Google a találati elejére sorolja és a felhasználók is szívesebben használják ezeket a villámgyors oldalakat, így több a forgalom és a konverzió is ezeken az oldalakon. Ami végül több bevételt jelent. 
 							<p/>
 				</section>
 
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Hogyan lehet mobilon is villámnygyors a webáruház?</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
 						A kulcs a legújabb technológia, de nem úgy, ahogy a legtöbb esetben mindig valami újat akarnak eladni az üzletkötők, amit aztán újra és újra le kell cserélni. Itt másról van szó. Mondhatnánk, hogy paradigmaváltás történt, igaz a sokadik, és persze a fejlődés sosem áll meg, de most, ahogy amúgy ERP szoftverek esetében is, úgy a weboldal és webáruház, ecommerce esetében is kikristályosodott a jógyakorlat a sok zsákutcának, pl mobilappfejlesztéseknek köszönhetően. <br><br>
@@ -42,7 +42,7 @@ changeLanguage("hu");
 						De ez csak a több felület kezelésének kellemetlenségét eliminálja, mert közben azt is lehetővé teszi, hogy nagyon egyszerűen más-más (pl kinézetű) felületet hozzunk létre vele, de mivel az alapja ugyanaz, nagyon gyorsan lehet például márka oldalakat, vagy B2B és B2C szeparát oldalakat készíteni vele. 
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Oké, gyors webáruház, de mi az a headless?</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
 						A fentebb ismertetett VueStoreFront, ahogy a neve is mutatja az a gyors felület, amivel a látogató találkozik. Az, hogy milyen adatokkal, például termékekkel, árakkal, töltjük meg ezeket a felületeket az a háttérendszeren múlik. És itt jön a VueStureFront és a headless igazi előnye, mert ez VueStoreFront többféle háttérrendszerhez is integrálható. <br><br>
@@ -51,7 +51,7 @@ changeLanguage("hu");
 						Nem csak a frissítési nehézséget elimináltuk, hanem ennek köszönhetően kiválaszthatjuk számunkra a legjobb háttérrendszert, aminek már nem kell webáruházként is működnie, ami belátható, hogy ha mindkét funkciót tudja, akkor valamelyiket nem elég jó szinvonalon. Tehát ha a háttérrendszerint egy célszoftver, ahogy a VueStoreFront is, akkor ezzel megkapjuk a legtöbb funkcionalitást a stabilitás, biztonság és gyorsaság mellett költséghatékonyan a profitmaximalizáció lehetőségével az egyszerű skálázhatósággal, amit a hagyományos módon szintén csak nagyon drágán, vagy a tehcnikai limitáció miatt egyáltalán nem lehetne megtenni. 
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">A háttérendszer</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
 							Jelenleg az Odoo-t ajánljuk VueSoreFront háttérrendszernek, de várhatóan az ERPNext-hez is lesz megoldásunk. Ebből belátható, hogy azok számára, akik az Odoo ecommerce megoldását kinőtték, vagy bele sem kezdtek annak limitált működése miatt, esetleg más meglévő ecommerce rendszerekkel szinkronizálnak, ez a legegyszerűbb és leggyorsabb módja a folyamatok egyszerűsítésére és a limit nélküli bővülésnek. Persze fordítva is meg lehet közelíteni, ha valaki a jelenlegi megoldásának csak a felületén kívánaja lecserélni, hiszen például a Shopify is kínál saját Headless megoldást, vagy a Shopify-hoz is kapcsolató a VuestoreFront, akkor is elérhető a gyorsulás, talán a legegyszerűbben, mert az ügyviteli folyamatok nem változnak, majd második lépésben lehetséges a korábbi háttérrenszert nyílt forrású megoldásra cserélni, hiszen egy webáruház mellé nem érdemes másik webáruházat fenntartani, főleg, hogy abból az egyéb ERP rendszerek által nyújtott magas szintű funkcionalitások, például raktározás, könyvelés, projektmenedzsment, ügyfélszolgálat stb., amire előbb-utóbb szükség lesz úgyis hiányzik. <br><br>
