--- a/src/pages/vuestorefront-headless-ecommerce.astro
+++ b/src/pages/vuestorefront-headless-ecommerce.astro
@@ -9,10 +9,10 @@ changeLanguage("en");
 
 <Layout lang="en" title="VueStoreFront Headless eCommerce Store for Speed and Independence">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">VueStoreFront Headless Store</h1>
+					<h1 class="text-[60px] leading-none font-semibold">VueStore&shy;Front Headless Store</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">For Speed and Independence.</h2>
 					<div>
 						<Link href="/contact">
@@ -20,8 +20,8 @@ changeLanguage("en");
 						</Link>
 					</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/vuestorefront-headless-ecommerce.jpg" alt="" />
+        <div class="mt-10 md:mt-0">
+					<img class="w-full" src="/images/vuestorefront-headless-ecommerce.jpg" alt="" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
@@ -32,7 +32,7 @@ changeLanguage("en");
 					</p>
 				</section>
 
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">How to Make Your Online Store Lightning Fast on Mobile?</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5">
 						The key is the latest technology, but not in the way most salespeople always want to sell something new that you have to replace over and over again. This is different. We could say that a paradigm shift has occurred, albeit the umpteenth one. Thanks to mobile app development, it has become clear that fast and simple software can be written despite the continuous increase in computing power and the growing speed of our devices. VueStoreFront was born, integrating the advantages of Vue.js, Nuxt.js, and Tailwind CSS while delivering all the necessary elements for the online store interface (such as product pages, shopping cart buttons, etc.) in an immediately usable or easily modifiable form. It also ensures the system and its components can be updated easily. <br><br>
@@ -41,7 +41,7 @@ changeLanguage("en");
 						Moreover, it eliminates the inconvenience of managing multiple interfaces, as it allows for very simple creation of different interfaces (e.g., different designs). Since the foundation is the same, it's easy to create brand pages or separate B2B and B2C pages with it.
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Okay, a Fast Online Store, but What Is Headless?</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5">
 						As described earlier, VueStoreFront, as its name suggests, is the fast interface that visitors encounter. The data filling these interfaces, such as products and prices, depends on the backend system. This is where VueStoreFront and headless truly shine because VueStoreFront can be integrated with various backend systems. <br><br>
@@ -50,12 +50,11 @@ changeLanguage("en");
 						Not only has it eliminated the difficulties of updates, but also, thanks to this, you can choose the best backend system for you. It no longer has to work as an online store; this way, you get the most functionality, stability, security, and speed, cost-effectively, with the opportunity for simple scalability, which would otherwise be very expensive or technically impossible using the traditional approach.
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">The Backend System</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5">
 						Currently, we recommend Odoo as the backend system for VueStoreFront, but we are expected to have a solution for ERPNext as well. It is foreseeable that for those who have outgrown Odoo's e-commerce solution or have not started with it due to its limited functionality, or those who need to synchronize with other existing e-commerce systems, this is the simplest and fastest way to streamline processes and enable unlimited expansion. Conversely, if someone wishes to replace only the user interface of their current solution, since, for example, Shopify offers its own headless solution or the VuestoreFront is also compatible with Shopify, acceleration is also available, perhaps the easiest way since business processes remain unchanged. In a second step, the previous backend system can be
-
- replaced with an open-source solution, as it is not worth maintaining another online store alongside one, especially when high-level functionality is missing from the other ERP systems such as warehousing, accounting, project management, customer service, etc., which will be needed sooner or later.<br><br>
+replaced with an open-source solution, as it is not worth maintaining another online store alongside one, especially when high-level functionality is missing from the other ERP systems such as warehousing, accounting, project management, customer service, etc., which will be needed sooner or later.<br><br>
  And yes, VueStoreFront Headless solution is a free an open-source software. 
 					</p>
 				</section>
