refactor: erpnext mobile view fix

--- a/src/pages/erpnext.astro
+++ b/src/pages/erpnext.astro
@@ -10,8 +10,8 @@ changeLanguage("en");
 
 <Layout lang="en" title="ERPnext">
   <Container>
-    <div class="px-5 dark:bg-stone-900">
-      <div class="flex justify-between items-center h-[70vh]">
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
         <div class="flex flex-col h-full justify-center">
           <h1 class="text-[60px] leading-none font-semibold text-[#192734] dark:text-white">Monolithon is the solid foundation</h1>
           <h2 class="text-xl text-gray-500 my-4 dark:text-white">ERPNext and Frappe knowledge.</h2>
@@ -19,8 +19,8 @@ changeLanguage("en");
             <Link href="/contact/" style="primary">Let's Talk!</Link>
           </div>
         </div>
-        <div>
-          <img class="w-[40vw]" src="/images/erpnextImage.png" alt="" />
+        <div class="mt-10 md:mt-0">
+          <img class="w-full" src="/images/erpnextImage.png" alt="" />
         </div>
       </div>
     </div>
@@ -41,7 +41,7 @@ changeLanguage("en");
         </ul>
       </section>
 
-      <section class="py-8 px-4 w-[45vw]">
+      <section class="py-8 px-4 md:w-2/3">
         <h2 class="font-bold text-3xl mb-10 text-[#192734] dark:text-white">ERPNext is the only truly free and open source, complete ERP</h2>
         <p class="list-disc text-[17px] leading-7 space-y-5 dark:text-white text-[#192734]">
           ERPNext is basically a business software that makes the everyday life of a business easier and transparent. But - just to highlight one
