--- a/src/pages/vuestorefront-headless-ecommerce.astro
+++ b/src/pages/vuestorefront-headless-ecommerce.astro
@@ -25,7 +25,7 @@ changeLanguage("en");
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">The Four Nines</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5">
 						In the "gold trade," the best gold is the four nines, which means 99.99% pure gold. <br><br> Similar standards apply to websites, as shown by Google Pagespeed Insight (a speed measurement tool based on Lighthouse software) with 4 values of 90%. This is practically gold because very few websites achieve this value today, especially for mobile versions. Google ranks these lightning-fast sites at the top of search results, and users prefer to use these quick-loading pages, resulting in increased traffic and conversions. Ultimately, this means more revenue.
