--- a/src/pages/hu/erpnext.astro
+++ b/src/pages/hu/erpnext.astro
@@ -9,8 +9,8 @@ changeLanguage("hu");
 
 <Layout lang="hu" title="ERPnext">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
 				<div class="flex flex-col h-full justify-center">
 					<h1 class="text-[60px] leading-none font-semibold">Monolithon a biztos alap</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext és Frappe magyarul.</h2>
@@ -18,12 +18,12 @@ changeLanguage("hu");
 						<Link href="/contact/" style="primary">Beszéljünk!</Link>
 				</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/erpnextImage.png" alt="" />
-				</div>
+        <div class="mt-10 md:mt-0">
+          <img class="w-full" src="/images/erpnextImage.png" alt="" />
+        </div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Az ERPNext az egyetlen igazán ingyenes és nyílt forráskódú teljes körű vállalatirányítási rendszer</h2>
 					<ul class="list-disc ml-10 space-y-5">
 						<li>
