ui: erpnext pg hu

--- a/src/pages/hu/erpnext.astro
+++ b/src/pages/hu/erpnext.astro
@@ -38,7 +38,7 @@ changeLanguage("hu");
 					</ul>
 				</section>
 
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Az ERPNext az egyetlen igazán ingyenes és nyílt forráskódú teljes körű vállalatirányítási rendszer</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
 						Az ERPNext alapvetően egy vállalatirányítási rendszer, ami megkönnyíti és átláthatóbbá teszi a vállalkozás mindennapjait. De - csak egy funkciót említve - akár több vállalat egyidejű kezelésére is használható, ahol a vállalat akár egy személy is lehet. Így könnyen követhetők az eltérő struktúrák közötti tranzakciók a rendszer segítségével. Például a vezetői bér költséget jelenthet egyénnek, de bevételt a vállalat számára. Így átláthatóvá válnak a személyes és vállalati pénzügyek és azok összekapcsolódása. De egy másik jó példa a személyes felhasználásra a napi, alkalmi, visszatérő projektfeladatok és tevékenységek követése és kezelése (amelyeknek szintén lehetnek bevétel vagy kiadási oldala). A vállalati felhasználás mellett az ERPNext a személyes használathoz is nélkülözhetetlen, amikor a pénzügyekkel vagy feladatokkal kapcsolatos dokumentumok kezeléséről van szó, amit az ERPNext rendszerben könnyedén meg lehet tenni. Néhány problémára pedig egyszerű megoldást kínál az ERPNext az élet minden területén. Az egyéb ERPNext által lefedett területek és működésük folyamatosan megjelennek a magyar ERPNext weboldalon, itt a monolithon.com-on.
