ui: mobile view h1 texts

--- a/src/pages/vuestorefront-headless-ecommerce.astro
+++ b/src/pages/vuestorefront-headless-ecommerce.astro
@@ -12,7 +12,7 @@ changeLanguage("en");
 		<div class="px-5 pt-10">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">VueStore&shy;Front Headless Store</h1>
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">VueStore&shy;Front Headless Store</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">For Speed and Independence.</h2>
 					<div>
 						<Link href="/contact">
