--- a/src/pages/erpnext.astro
+++ b/src/pages/erpnext.astro
@@ -13,7 +13,7 @@ changeLanguage("en");
 		<div class="px-5 pt-10">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
         <div class="flex flex-col h-full justify-center">
-          <h1 class="text-[60px] leading-none font-semibold text-[#192734] dark:text-white">Monolithon is the solid foundation</h1>
+          <h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">Monolithon is the solid foundation</h1>
           <h2 class="text-xl text-gray-500 my-4 dark:text-white">ERPNext and Frappe knowledge.</h2>
           <div>
             <Link href="/contact/" style="primary">Let's Talk!</Link>
