--- a/src/pages/hu/erpnext.astro
+++ b/src/pages/hu/erpnext.astro
@@ -12,7 +12,7 @@ changeLanguage("hu");
 		<div class="px-5 pt-10">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">Monolithon a biztos alap</h1>
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">Monolithon a biztos alap</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext és Frappe magyarul.</h2>
 				<div>
 						<Link href="/contact/" style="primary">Beszéljünk!</Link>
