--- a/src/pages/hu/static-site-generator.astro
+++ b/src/pages/hu/static-site-generator.astro
@@ -27,14 +27,14 @@ changeLanguage("hu");
 			<div class="flex flex-col items-center">
 				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Jamstack - a gyors weboldal kulcsa a rendszer egyszerűsítése - szétválasztással</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						A Jamstack egy merőben új megközelítés, amit leegyszerűsítve úgy foglalhatunk össze, hogy visszatérünk a gyökerekhez, amikor egy weboldal nem akar több lenni, mint egy weboldal. Azaz lehet több, de a korábbi komplex rendszerekkel ellentétben nem mindent a weblap alkalmazásban kell megoldanunk. Ezt úgy mondhatjuk, hogy a weboldal felszabadul, mert az mostantól szinte bármilyen lehet és nem kell a komplex rendszerből adódó limitációk miatt aggódnunk. Korábban, ha egy például php-s oldalra gondolunk, mint a Wordpress, akkor ott ahhoz, hogy egy weboldalt felépítsünk a Wordpress korlátai behatárolták a lehetőségeinket. Most, ahogyan a hivatalos meghatározás szól: Jamstack eltörli a megközelítést, hogy az üzleti logika (egyszerűsítve a weboldal funkciói) határozza meg a weboldal kinézetét, működését, együttesen élményt. <br><br>
 						A vissza az alapakhoz azt jelenti, hogy - ugyan a legmodernebb technológiák mellett- az egyszerű, html, segítségével építhetünk gyors weboldalt. De az előbb említett üzleti logikára, funkciókra szükség lehet, és nem kell azokról lemondanunk, de azokat rábízhatjuk egy háttérrendszerre, ami ezek kezelésében sokkal jobb, mint például az <a href="/hu/erpnext/" style="text-decoration: underline;">ERPNext</a>, vagy az <a href="/hu/odoo-magyarul/" style="text-decoration: underline;">Odoo</a> vállalatirányítási rendszer, de említetjük a <a href="/hu/mautic-marketing-automation-platform/" style="text-decoration: underline;">Mautic marketing és hírlevél szoftvert</a> is, amelyekkel API-n keresztül köthetjük össze. <br><br>
 						Ilyen háttérrendszerre azonban nem is minden esetben van szükség, sőt a legtöbb esetben a Jamstack csupán egyetlen jóval testreszabhatóbb és sokkal gyorsabb statikus weboldal komponensből, azaz ténylegesen weboldalakból áll. 
 				</section>
 				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Statikus oldalak használata</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 					A korábban használt rendszerek, mint például a sokak által kedvelt Wordpress, vagy Drupal CMS rendszerek is hasonló megoldáshoz folyamodtak amikor más módszerekkel már nem tudták gyorsítani a weboldalaikat, vagy akkora forgalmat kellett kiszolgálni amit másképp már nem lehetett. <br><br>
 					Ez pedig nem más, mint, hogy már nem dinamikusan generáljuk a weblapokat egyesével amikor azt épp valaki meg akarja tekinteni, hanem előre elkészítjük és mintegy gyorsítótárból mutatjuk meg a látogatónak. <br><br>
 					A Static Site Generator megoldás pontosan ezt csinálja, csak ahogy fenntebb írtam egy lassú, elavult rétegtől függetlenül. (Az igazsághoz hozzátartozik, hogy már a Wordpresshez is elérhető Jamstack megoldás, de itt akkor megkérdőjelezhető, hogy mi szükség van a Wordpressre!?)<br><br>
@@ -46,7 +46,7 @@ changeLanguage("hu");
 				</section>
 				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Astro.build</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 					Szerencsére ma már rengeteg Statis Site Generator megoldásból választhatunk. Az egyik első, legelterjedtebb a lenti bekezdésben említett HUGO volt, amely a mai napig nagyon kedvelt és jó megoldás, ezért is támogatjuk, de egy fontos részét a lassú weboldal problémájának nem kezelte. Ez pedig a különbő - az egyszerűség kedvéért nevezzük - interaktív elemek megvalósításával kapcsolatos. <br><br>
 					És itt jön a képbe az Astro.build. Mert a legtöbb másik SSG szintén használja a HTML mellett (amiből a szöveges tartalom felépül) az úgynevezett javascriptet. És ami a legrosszabb, hogy sok javascriptet egyszerre. Még egy-egy ilyen megoldás is nagy erőforrást igényel a látogató eszközétől, de ha ezek számolatlanul futnak, akkor nagyon lelassítják az oldalt. <br><br>
 					Az Astro.build erre kínál megoldást, amiből csak lehetséges HTML statikus kódot generál, és nincs az oldal teletűzdelve pazarló kódokkal. Ez teszi lehetővé, hogy mobilon is villámgyors legyen az Astro.build alapon felépített weboldal, mint a https://www.monolithon.com oldalunk is. 
@@ -54,13 +54,13 @@ changeLanguage("hu");
 				</section>
 				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">HUGO</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						A HUGO volt egyike az első fecskéknek, de azóta is folyamatosan fejlődik és rengetegen használják, mert a fentebb leírtak közül szinten minden elmondható róla, ami nagyon előnyössé teszi a használatát. Static Site Generator, Jamstack renszerbe integrálható és többnyelvű oldalak építését és kezelését teszi lehetővé. Viszont a javascripteket nem kezeli annyira ügyesen, mint az Astro.Build. 
 					</p>
 				</section>
 				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Nuxt.js</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 							A Nuxt.js-t csak azért szeretjük megemlíteni, mert ugyan rendelkezik a fenti szuper tulajdonságokkal, azonban annak ellenére, hogy önnálló oldalhoz nem használjuk, azoknak, akik nem csak weboldalt szerentének, legyen az statikus oldal, vagy Jamstack alapú, hanem értékesíteni is szeretnének és ehhez is villámgyors rendszert használnának, akkor a Headless <a href="/hu/vuestorefront-headless-ecommerce/" style="text-decoration: underline;">VueStoreFront webáruház</a> rendszerét ajánljuk, ami egy gyors ecoommerce megoldás többek között a Nuxt.js-nek köszönhetően. 
 					</p>
 				</section>
